--- a/main.html
+++ b/main.html
@@ -4,9 +4,59 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table, th, td {
+		  border: 1px solid black;
+		  border-collapse: collapse;
+		}
+		th{
+			text-align:left;
+		}
+		td{
+			text-align:right;
+		}
+	</style>
 </head>
 
 <body>
+	<table border ="1" style="width:100%" >
+		<thead style="text-align:left">
+			<tr style="background-color:lightcoral">
+				<th>Part</th>
+				<th>XS</th>
+				<th>S</th>
+				<th>M</th>
+				<th>L</th>
+				<th>XL</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr style="background-color:lightpink">
+				<th>Waist</th>
+				<td>25</td>
+				<td>28</td>
+				<td>30</td>
+				<td>31</td>
+				<td>32</td>
+			</tr>
+			<tr style="background-color:mistyrose">
+				<th>Chest</th>
+				<td>34</td>
+				<td>34</td>
+				<td>38</td>
+				<td>40</td>
+				<td>41</td>
+			</tr>
+			<tr style="background-color:lightgray">
+				<th>Sleeve</th>
+				<td>23</td>
+				<td>24</td>
+				<td>34</td>
+				<td>25</td>
+				<td>25</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
