--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 <body>
 	<table border ="1" style="width:100%" >
 		<thead style="text-align:left">
-			<tr style="background-color:lightcoral">
-				<th>Part</th>
+			<tr style="background-color:lightcoral;color:white"">
+				<td style="text-align:left">Part</td>
 				<th>XS</th>
 				<th>S</th>
 				<th>M</th>
@@ -31,8 +31,8 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr style="background-color:lightpink">
-				<th>Waist</th>
+			<tr style="background-color:lightpink;color:white">
+				<td style="text-align:left">Waist</td>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -40,7 +40,7 @@
 				<td>32</td>
 			</tr>
 			<tr style="background-color:mistyrose">
-				<th>Chest</th>
+				<td style="text-align:left">Chest</td>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -48,7 +48,7 @@
 				<td>41</td>
 			</tr>
 			<tr style="background-color:lightgray">
-				<th>Sleeve</th>
+				<td style="text-align:left">Sleeve</td>
 				<td>23</td>
 				<td>24</td>
 				<td>34</td>
