--- a/main.html
+++ b/main.html
@@ -1,7 +1,63 @@
 <!DOCTYPE html>
-
 <html>
 
+<head>
+	<link rel="stylesheet" href="styles.css">
+	
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Part</th>
+				<th>XS</th>
+				<th>S</th>
+				<th>M</th>
+				<th>L</th>
+				<th>XL</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Waist</td>
+				<td>25</td>
+				<td>28</td>
+				<td>30</td>
+				<td>31</td>
+				<td>32</td>
+			</tr>
+			<tr>
+				<td>Chest</td>
+				<td>34</td>
+				<td>34</td>
+				<td>38</td>
+				<td>40</td>
+				<td>41</td>
+			</tr>
+			<tr>
+				<td>Sleeve</td>
+				<td>23</td>
+				<td>24</td>
+				<td>24</td>
+				<td>25</td>
+				<td>25</td>
+			</tr>
+		</tbody>
+	</table>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
+
+
+
+
+<!-- <html>
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
@@ -21,8 +77,8 @@
 <body>
 	<table border ="1" style="width:100%" >
 		<thead style="text-align:left">
-			<tr style="background-color:lightcoral;color:white"">
-				<td style="text-align:left">Part</td>
+			<tr style="background-color:lightcoral;color:white">
+				<th>Part</th>
 				<th>XS</th>
 				<th>S</th>
 				<th>M</th>
@@ -32,7 +88,7 @@
 		</thead>
 		<tbody>
 			<tr style="background-color:lightpink;color:white">
-				<td style="text-align:left">Waist</td>
+				<th>Waist</th>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -40,7 +96,7 @@
 				<td>32</td>
 			</tr>
 			<tr style="background-color:mistyrose">
-				<td style="text-align:left">Chest</td>
+				<th>Chest</th>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -48,7 +104,7 @@
 				<td>41</td>
 			</tr>
 			<tr style="background-color:lightgray">
-				<td style="text-align:left">Sleeve</td>
+				<th>Sleeve</th>
 				<td>23</td>
 				<td>24</td>
 				<td>34</td>
@@ -58,9 +114,3 @@
 		</tbody>
 	</table>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
